# libsockcanpp

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  libsockcanpp.pc.in
.devcontainer/: Dockerfile  devcontainer.json  setup-vcan.sh
.github/workflows/: cmake.yml  cmake_alpine_versions.yml  cmake_arch.yml  cmake_cppcheck.yml  cmake_debian_versions.yml  cmake_fedora_versions.yml  cmake_no_concepts.yml  cmake_ubuntu_versions.yml  codeql.yml  coverage.yml  cpack.yml  cpack_alpine_versions.yml  cpack_arch.yml  cpack_debian_versions.yml  cpack_fedora_versions.yml  cpack_no_concepts.yml  cpack_ubuntu_versions.yml  fuzz.yml  gtest.yml  gtest_no_concepts.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  libsockcanpp.pc  sockcanpp.so.1.7.4
_codeql_build_dir/include/: Makefile  cmake_install.cmake
_codeql_build_dir/src/: Makefile  cmake_install.cmake
cmake/: cpack.cmake  dependencies.cmake  libsockcanppConfig.cmake
cmake/cmake_includes/: fetch_cpm.cmake  fetch_libmnl.cmake
include/: CMakeLists.txt  CanDriver.hpp  CanFdDriver.hpp  CanFdMessage.hpp  CanId.hpp  CanMessage.hpp  CanXLMessage.hpp  EnumCheck.hpp  TlOptional.hpp
include/can_errors/: CanControllerError.hpp  CanProtocolError.hpp  CanTransceiverError.hpp
include/exceptions/: CanCloseException.hpp  CanException.hpp  CanInitException.hpp  InvalidSocketException.hpp
include/netlink/: InterfaceManager.hpp
include/sockcanpp/: CanDriver.hpp  CanFdMessage.hpp  CanMessage.hpp  CanXlMessage.hpp  EnumCheck.hpp  TlOptional.hpp
include/sockcanpp/can_errors/: CanControllerError.hpp  CanProtocolError.hpp  CanTransceiverError.hpp
include/sockcanpp/exceptions/: CanCloseException.hpp  InvalidSocketException.hpp
src/: CMakeLists.txt  CanDriver.cpp
test/: CMakeLists.txt
test/app/: CMakeLists.txt
test/app/src/: InterfaceSetupTest.cpp  Main.cpp
test/can_fd/: CMakeLists.txt
test/can_fd/src/: Main.cpp
test/fuzz/: CMakeLists.txt
test/fuzz/src/: MessageFuzzer.cpp
test/src/: Main.cpp
test/unit/: CMakeLists.txt
test/unit/src/: CanFdMessage_Tests.cpp  CanId_Tests.cpp  CanMessage_ErrorFrameTests.cpp  CanMessage_Tests.cpp  CanXlMessage_Tests.cpp  InterfaceTests.cpp  SecurityRegression_Tests.cpp  main.cpp
toolchains/: arm64-toolchain.cmake  armhf-toolchain.cmake  i686-toolchain.cmake  ppc-toolchain.cmake  ppc64-toolchain.cmake  x86_64-toolchain.cmake  x86_64_llvm_toolchain.cmake
